--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p>
         I currently work at <a href="http://yousician.com/">Yousician</a> as a hands-on Application Architect and Team Lead.
         <br>
-        I'm currently <em>not</em> actively looking for a new job, but here's my <a href="https://www.linkedin.com/in/sbergen/">LinkedIn</a> page, incase you are interested anyway.
+        I'm currently <em>not</em> actively looking for a new job, but here's my <a href="https://www.linkedin.com/in/sbergen/">LinkedIn</a> page, in case you are interested anyway.
       </p>
 
       <p>
@@ -32,7 +32,7 @@
       </p>
 
       <p>
-        Outise of tech, my interest include music (producing, listening, playing bass and guitar), investing, and intermittently coffee and bicycles.
+        Outside of tech, my interest include music (producing, listening, playing bass and guitar), investing, and intermittently coffee and bicycles.
       </p>
 
       <p>
