--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Sakari Bergen - beatwaves.net</title>
+    <title>beatwaves.net - Sakari Bergen</title>
     <meta name="description" content="Sakari Bergen's landing site">
     <meta name="author" content="Sakari Bergen">
 
@@ -15,32 +15,24 @@
   <body>
     <div id="main-content">
       <h2>
-        You've reached the personal landing page of <em>Sakari Bergen</em>
+        👋 Hi, I'm Sakari!
       </h2>
 
       <p>
-        I currently work at <a href="http://yousician.com/">Yousician</a> as a hands-on Application Architect and Team Lead.
-        <br>
-        I'm currently <em>not</em> actively looking for a new job, but here's my <a href="https://www.linkedin.com/in/sbergen/">LinkedIn</a> page, in case you are interested anyway.
+        I currently work at <a href="http://yousician.com/">Yousician</a> as a hands-on Application Architect,
+        and I'm interested in music, software architecture, functional programming and test automation.
       </p>
 
       <p>
-        I mostly code in C# and C++ at work, and these days don't do much coding outside of work.
-        When I do code on my free time, I usually play around with functional programming (mostly with <a href="https://www.haskell.org/">Haskell</a>),
-        study high performance tools like <a href="https://www.rust-lang.org">Rust</a>, or DSP related stuff like <a href="http://faust.grame.fr/">Faust</a>.
-        You can find some of my past projects and open-source contributions on my <a href="https://github.com/sbergen">GitHub page</a>.
+        If you are interested in asynchronous testing in C#, check out <a href="https://www.beatwaves.net/Responsible">Responsible</a>!
       </p>
 
       <p>
-        Outside of tech, my interest include music (producing, listening, playing bass and guitar), investing, and intermittently coffee and bicycles.
-      </p>
-
-      <p>
-        My Twitter handle is <a href="https://twitter.com/SakariBergen">@SakariBergen</a>.
-      </p>
-
-      <p>
-        This page mostly exists because I want to hold on to my domain name, and feel like I need to have something here :)
+        You can also find me on
+        <a href="https://github.com/sbergen">GitHub</a>,
+        <a href="https://soundcloud.com/sbergen">SoundCloud</a>,
+        <a href="https://twitter.com/SakariBergen">Twitter</a>, and
+        <a href="https://www.linkedin.com/in/sbergen/">LinkedIn</a>.
       </p>
     </div>
   </body>
